syntax = "proto3";
import "google/protobuf/timestamp.proto";
package com.smarthome.heater;
option java_multiple_files = true;
option java_package = "com.smarthome.heater.";
option java_outer_classname = "heaterServiceImpl";


// The heater service definition.
service HeaterService {
  // To get the temperature
  rpc GetTemperature (stream GetTemperatureRequest) returns (GetTemperatureResponse) {
  }
}

// The request message containing the temperature, the time, heater status
message GetTemperatureRequest {
  double temperature = 1;
  google.protobuf.Timestamp current_time = 2;
  string status = 3;
}

// The response message containing the status of the heater
message GetTemperatureResponse {
  string message = 1;
}
